<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.passgify.bfrisbie.passgify.ParameterInputActivity">

    <EditText
        android:id="@+id/service_id"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/service_id" />

    <EditText
        android:id="@+id/key"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/service_id"
        android:hint="@string/key_hint" />

    <Spinner
        android:id="@+id/prefix_spinner"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/key"
        android:entries="@array/prefix_array"
        android:prompt="@string/prefix_prompt" />

    <Spinner
        android:id="@+id/length_spinner"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/prefix_spinner"
        android:entries="@array/length_array"
        android:prompt="@string/length_prompt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/length_spinner"
        android:text="@string/button_gen"
        android:onClick="sendMessage" />

</RelativeLayout>
