<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.passgify.bfrisbie.passgify.SetupActivity">

    <EditText
        android:id="@+id/salt"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/salt" />

    <EditText
        android:id="@+id/default_prefix"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/salt"
        android:hint="@string/default_prefix" />

    <Spinner
        android:id="@+id/hash_alg_spinner"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/default_prefix"
        android:entries="@array/hash_alg_array"
        android:prompt="@string/hash_alg_prompt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hash_alg_spinner"
        android:text="@string/button_set_values"
        android:onClick="sendMessage" />

</RelativeLayout>
